--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 __pycache__/
-save_train_dir/model_weights/*.h5
-COCO_dataset/english
-COCO_dataset/indonesian
+save_train_dir/*
+COCO_dataset/captions
+COCO_dataset/test2014
+COCO_dataset/train2014
+COCO_dataset/val2014
 captions_val2014_results.json
